--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -241,8 +241,8 @@
             </div>
         </div> -->
         <br>
-
-        <div class="container-fluid calender">
+        <!-- remove comments -->
+        <!-- <div class="container-fluid calender">
             <div class="row">
                 <div class="col-md-2 custom-ss-our-events-block">
                     <ul class="custom-ss-our-event-menu-block" id="mydiv">
@@ -297,23 +297,11 @@
                     <img class="calender-img" src="../assets/images/calendar-background.png"><span
                         class="cal-date">{{todayDaate}}</span>
                     <ng-fullcalendar #ucCalendar [options]="calendarOptions"></ng-fullcalendar>
-                    <!-- <div [ngSwitch]="view" style="background-color: white !important;">
-                        <mwl-calendar-month-view *ngSwitchCase="'month'" [viewDate]="viewDate" [events]="events"
-                            [refresh]="refresh" [activeDayIsOpen]="activeDayIsOpen" (dayClicked)="dayClicked($event.day)"
-                            (eventClicked)="handleEvent('Clicked', $event.event)" (eventTimesChanged)="eventTimesChanged($event)">
-                        </mwl-calendar-month-view>
-                        <mwl-calendar-week-view *ngSwitchCase="'week'" [viewDate]="viewDate" [events]="events"
-                            [refresh]="refresh" (eventClicked)="handleEvent('Clicked', $event.event)"
-                            (eventTimesChanged)="eventTimesChanged($event)">
-                        </mwl-calendar-week-view>
-                        <mwl-calendar-day-view *ngSwitchCase="'day'" [viewDate]="viewDate" [events]="events" [refresh]="refresh"
-                            (eventClicked)="handleEvent('Clicked', $event.event)" (eventTimesChanged)="eventTimesChanged($event)">
-                        </mwl-calendar-day-view>
-                    </div> -->
+                    
                 </div>
 
             </div>
-        </div>
+        </div> -->
 
 
     </div>
@@ -392,8 +380,8 @@
 
 
 
-
-<div class="custom-ss-student-thoughts-block">
+<!-- rmeove commebts -->
+<!-- <div class="custom-ss-student-thoughts-block">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -430,8 +418,7 @@
                                     <div class="student1 custom-ss-testimoni-details">
                                         <h4>&nbsp;{{userInfo.name}}</h4>
                                     </div>
-                                    <!-- <br/>
-                                    <span style="color: #505251;">{{userInfo.designation}}</span> -->
+                                 
                                 </div>
                             </div>
                         </div>
@@ -450,7 +437,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 
 
@@ -503,6 +490,8 @@
     </div>
 </div>-->
 
+<!-- remove comments -->
+<!-- 
 <div class="counter-map">
     <div class="container">
         <div class="row" *ngIf="getHomePageCounterValues!=undefined">
@@ -602,7 +591,7 @@
         </div>
 
     </div>
-</div>
+</div> -->
 
 <div class="container">
     <div class="row">
