--- a/src/app/tech-bank/tech-bank.component.html
+++ b/src/app/tech-bank/tech-bank.component.html
@@ -213,7 +213,7 @@
                 <ul class="nav nav-pills crd-btn-dv">
                   <li class="nav-item">
                     <button class="nav-link btn btn-light  buttonarticle" (click)="viewTechTalkDetails(techtalkdata)"
-                      data-toggle="modal" data-target="#detailsModal">View Detail's</button>
+                      data-toggle="modal" data-target="#detailsModal">More Detail's</button>
                   </li>
                   <li class="nav-item" *ngIf="!checkLoginStatus()">
                     <button class="nav-link btn btn-light buttonarticle"
