--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -812,6 +812,31 @@ ul.login-btn {
 }
 }
 
+.radio-btns{
+  background: #33099e;
+  width: 20%;
+  padding: 8px;
+  border-radius: 48px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  cursor: pointer;
+  }
+  
+  .fa-check{
+      position: absolute;
+      left: 2%;
+    top: 3px;
+      color: white;
+  }
+
+  .fa-check1{
+    position: absolute;
+    left: 2%;
+    top: 3px;
+    color: white;
+}
+  
+
 @media only screen and (min-width: 799px) and (max-width: 960px) {}
 
 @media only screen and (min-width: 960px) and (max-width: 1023px) {}
