--- a/src/styles.css
+++ b/src/styles.css
@@ -131,8 +131,8 @@ height: 2em !important;
 
 
 .profilepicture{
-    width: 90px;
-    height: 90px;
+    width: 50px;
+    height: 50px;
 }
 
 .bg-dark{
@@ -195,7 +195,7 @@ height: 2em !important;
 
     .cal-month-view .cal-day-cell.cal-today {
         background-color: #007bff !important;;
-        border-radius: 271px !important;;
+        /* border-radius: 271px !important;; */
         color: white !important;;
     }
 
@@ -367,6 +367,10 @@ width: 85%;
 .card-header{
   
     padding: -0.25rem 1.25rem !important;
+}
+
+.cal-month-view .cal-day-badge{
+    background-color:#2c668a !important;
 }
 
       /***************mediaquaries*********/
